added API for upgrade token (findOne)
